--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ PAYPAL_SANDBOX_API_SECRET=Ap2nJf9k3AuwJtXY.qteZfi-rQ5iASh28whD5qtak3bJ4hVuKf.X4s
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=pgsql_heroku
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=loveabloom
